--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build" : "parcel build src/index.html --dist-dir public"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "firebase": "^11.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.0"
