--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build" : "parcel build src/index.html --dist-dir public"
+    "build": "parcel build src/index.html --dist-dir public"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-react": "^7.26.3",
+    "@reduxjs/toolkit": "^2.7.0",
     "parcel": "^2.14.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
@@ -21,6 +22,7 @@
     "firebase": "^11.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0"
   }
 }
