--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "firebase": "^11.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
